manifests/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: k8s-debug
  name: k8s-debug
  namespace: k8s-debug
spec:
  selector:
    matchLabels:
      app: k8s-debug
  template:
    metadata:
      labels:
        app: k8s-debug
    spec:
      containers:
        - image: quay.io/filiphavlicek/k8s-debug:nonroot
          imagePullPolicy: Always
          name: k8s-debug
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 1m
              memory: 1Mi
            limits:
              memory: 60Mi
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 5
      tolerations:
        - operator: Exists
