manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-debug
  name: k8s-debug
  namespace: k8s-debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-debug
  template:
    metadata:
      labels:
        app: k8s-debug
    spec:
      containers:
        - image: quay.io/filiphavlicek/k8s-debug:nonroot
          imagePullPolicy: Always
          name: k8s-debug
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          resources:
            requests:
              cpu: 10m
              memory: 30Mi
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - k8s-debug
                topologyKey: kubernetes.io/hostname
              weight: 100
      terminationGracePeriodSeconds: 5
