manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-debug
  namespace: k8s-debug
  labels:
    app: k8s-debug
spec:
  containers:
    - name: k8s-debug
      image: quay.io/filiphavlicek/k8s-debug:root
